# prom-remote-write

./: ARCHITECTURE.md  CHANGELOG.md  METRICS.md  README.md  README.vi.md  docker-compose.yml
.github/workflows/: docker.yml
blackbox/: config.yml
docs/: README.md
docs/architecture/: Multi-Region.md  federated-multi-region.md  federated-multi-region.vi.md  overview.md  overview.vi.md
docs/guides/: blackbox-exporter-explained.md  dashboard-guide.md  latency-monitoring.md  network-latency-simulation.md  quick-start.md  real-world-comparison.md
docs/metrics/: reference.md  reference.vi.md
grafana/provisioning/: datasources.yml
grafana/provisioning/dashboards/: application-performance.json  application.json  cross-region-latency.json  global-infrastructure.json  infrastructure.json  monitoring-stack-health.json  multi-region-overview.json  (+2 more)
mock-exporter/: Dockerfile  config.yml  go.mod
mock-exporter-python/: Dockerfile  config.yml
mock-exporter/golang/: go.mod  main.go
mock-exporter/python/: Dockerfile  README.md  main.py  pyproject.toml
prometheus/: receiver.yml  writer.yml
prometheus-writer/: prometheus.yml
scripts/: simulate-latency.sh
vmagent/: ap-northeast-1-eks-01-beta.yml  ap-southeast-1-dev-eks-01.yml  ap-southeast-1-eks-01-dev.yml  ap-southeast-1-eks-01-prod.yml  ap-southeast-1-prod-eks-01.yml  ap-southeast-1.yml  eu-west-1-eks-01-prod.yml  eu-west-1-prod-eks-01.yml  eu-west-1.yml  receiver-scraper.yml  sa-east-1.yml  us-east-1-eks-01-prod.yml  us-east-1-eks-02-prod.yml  us-east-1-prod-eks-01.yml  us-east-1-prod-eks-02.yml  us-east-1.yml
