[project]
name = "mock-exporter-python"
version = "0.1.0"
description = "Mock metrics exporter for Prometheus remote write demo"
authors = [
    {name = "Duy", email = "duy@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prometheus-client>=0.20.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
